--- a/data-convert.ipynb
+++ b/data-convert.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "from chinglunarcalendar import Converter, Solar, Sexagenary\n",
+    "from ichinglunarcalendar import Converter, Solar, SexagenaryBasic, Sexagenary\n",
     "\n",
     "# solar converts to lunar, then converts to solar\n",
     "solar = Solar(2023, 3, 22)\n",
@@ -33,29 +33,47 @@
     "lunar = Converter.Solar2Lunar(solar)\n",
     "print(lunar)\n",
     "\n",
-    "[Sexagenary.getString(*i) for i in Converter.Solar2LunarString(Solar(2023, 3, 22))]"
+    "[SexagenaryBasic.getString(*i) for i in Converter.Solar2Sexagenary(Solar(2023, 3, 22))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sexagenary(year=quý mão, month=ất mão, day=kỷ mão)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import chinglunarcalendar.ngrams as ngrams\n",
-    "import chinglunarcalendar._data as data \n",
-    "trigrams_branch_start = {\n",
-    "    \"càn\": \"tý\",\n",
-    "    \"đoài\": \"dần\",\n",
-    "    \"ly\": \"thìn\",\n",
-    "    \"chấn\": \"tý\",\n",
-    "    \"tốn\": \"sửu\",\n",
-    "    \"khảm\": \"mão\",\n",
-    "    \"cấn\": \"tỵ\",\n",
-    "    \"khôn\": \"mùi\"\n",
-    "}\n",
-    "\n",
-    "earthlyBranches = data.earthlyBranches"
+    "Sexagenary(2023, 3, 22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((9, 3), (1, 3), (5, 3))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Converter.Solar2Sexagenary(Solar(2023, 3, 22))"
    ]
   },
   {
@@ -82,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
