fix earthbranches and add hex class

--- a/data-convert.ipynb
+++ b/data-convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,13 +19,13 @@
        "['quý mão', 'ất mão', 'kỷ mão']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ichinglunarcalendar import Converter, Solar, SexagenaryBasic, Sexagenary\n",
+    "from ichinglunarcalendar import Converter, Solar, SexagenaryBasic, Sexagenary, Hexagram\n",
     "\n",
     "# solar converts to lunar, then converts to solar\n",
     "solar = Solar(2023, 3, 22)\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "Sexagenary(year=quý mão, month=ất mão, day=kỷ mão)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,22 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lôi Trạch Quy Muội\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "((9, 3), (1, 3), (5, 3))"
+       "['tỵ', 'mão', 'sửu', 'ngọ', 'thân', 'tuất']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Converter.Solar2Sexagenary(Solar(2023, 3, 22))"
+    "hex = Hexagram(1, 2)\n",
+    "print(hex.name)\n",
+    "hex.earthBranches"
    ]
   },
   {
