--- a/data-convert.ipynb
+++ b/data-convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "['quý mão', 'ất mão', 'kỷ mão']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "Sexagenary(year=quý mão, month=ất mão, day=kỷ mão)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,31 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lôi Trạch Quy Muội\n"
+      "Thiên Trạch Lý\n",
+      "Tỵ Mão Sửu Ngọ Thân Tuất\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['tỵ', 'mão', 'sửu', 'ngọ', 'thân', 'tuất']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "hex = Hexagram(1, 2)\n",
     "print(hex.name)\n",
-    "hex.earthBranches"
+    "print(hex.getEarthBranches())"
    ]
   },
   {
