--- a/data-convert.ipynb
+++ b/data-convert.ipynb
@@ -58,22 +58,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thiên Trạch Lý\n",
-      "Tỵ Mão Sửu Ngọ Thân Tuất\n"
+      "Trạch Hỏa Cách\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 1, 1, 0, 2, 3, 1, 11, 11, 9, 7]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "hex = Hexagram(1, 2)\n",
+    "hex = Hexagram(2, 3)\n",
     "print(hex.name)\n",
-    "print(hex.getEarthBranches())"
+    "hex.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex._mainElement"
    ]
   },
   {
