finish hexagrams and add six relatives

--- a/data-convert.ipynb
+++ b/data-convert.ipynb
@@ -12,28 +12,16 @@
       "Solar(year=2023, month=3, day=22)\n",
       "Lunar(year=2023, month=2, day=1, isleap=True)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['quý mão', 'ất mão', 'kỷ mão']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ichinglunarcalendar import Converter, Solar, SexagenaryBasic, Sexagenary, Hexagram\n",
+    "from ichinglunarcalendar import Converter, Solar, SexagenaryBasic, Sexagenary, Hexagrams\n",
     "\n",
     "# solar converts to lunar, then converts to solar\n",
     "solar = Solar(2023, 3, 22)\n",
     "print(solar)\n",
     "lunar = Converter.Solar2Lunar(solar)\n",
-    "print(lunar)\n",
-    "\n",
-    "[SexagenaryBasic.getString(*i) for i in Converter.Solar2Sexagenary(Solar(2023, 3, 22))]"
+    "print(lunar)"
    ]
   },
   {
@@ -58,51 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trạch Hỏa Cách\n"
+      "Quẻ chính: Trạch Hỏa Cách; quẻ biến: Thiên Hỏa Đồng Nhân\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1, 0, 1, 1, 1, 0, 2, 3, 1, 11, 11, 9, 7]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "hex = Hexagram(2, 3)\n",
-    "print(hex.name)\n",
-    "hex.config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hex._mainElement"
+    "hex = Hexagrams(2, 3, 6)\n",
+    "print(hex)"
    ]
   },
   {
@@ -129,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
