add RandomIching and SeriesIching class

--- a/example_use.ipynb
+++ b/example_use.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "from iching import Converter, Solar, TimeIChing, Sexagenary\n",
+    "from iching import Converter, Solar, TimeIChing, Sexagenary, Hexagrams, RandomIching, SeriesIching\n",
     "# solar converts to lunar, then converts to solar\n",
     "solar = Solar(2023, 3, 22)\n",
     "print(solar)\n",
@@ -24,6 +24,53 @@
     "print(lunar)\n",
     "print(TimeIChing.datetimeHex(2024, 8, 14, 15, 2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Quẻ chính: Hỏa Thiên Đại Hữu; Quẻ biến: Địa Phong Thăng"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RandomIching.randomHex()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Quẻ chính: Thiên Phong Cấu; Quẻ biến: Trạch Phong Đại Quá"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SeriesIching.seriesHex(\"123\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
