--- a/example_use.ipynb
+++ b/example_use.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -11,58 +11,85 @@
      "text": [
       "Solar(year=2023, month=3, day=22)\n",
       "Lunar(year=2023, month=2, day=1, isleap=True)\n",
-      "Quẻ chính: Sơn Địa Bác; Quẻ biến: Sơn Thủy Mông\n"
+      "Quẻ chính: Sơn Địa Bác; Quẻ biến: Sơn Thủy Mông\n",
+      "Quẻ chính: Phong Lôi Ích; Quẻ biến: Thuần Càn\n",
+      "Quẻ chính: Thuần Chấn; Quẻ biến: Lôi Trạch Quy Muội\n"
      ]
     }
    ],
    "source": [
     "from iching import Converter, Solar, TimeIChing, Sexagenary, Hexagrams, RandomIching, SeriesIching\n",
+    "import pandas as pd\n",
+    "\n",
     "# solar converts to lunar, then converts to solar\n",
     "solar = Solar(2023, 3, 22)\n",
     "print(solar)\n",
     "lunar = Converter.Solar2Lunar(solar)\n",
     "print(lunar)\n",
-    "print(TimeIChing.datetimeHex(2024, 8, 14, 15, 2))"
+    "\n",
+    "# Generate hexagram\n",
+    "print(TimeIChing.datetimeHex(2024, 8, 14, 15, 2))\n",
+    "print(RandomIching.randomHex())\n",
+    "print(SeriesIching.seriesHex(\"422\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Quẻ chính: Hỏa Thiên Đại Hữu; Quẻ biến: Địa Phong Thăng"
+       "{'year': 'giáp thìn', 'month': 'ất hợi', 'day': 'quý dậu'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RandomIching.randomHex()"
+    "solar = Solar(2024, 11, 5)\n",
+    "result = Converter.Solar2SexagenaryText(solar)\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Quẻ chính: Thiên Phong Cấu; Quẻ biến: Trạch Phong Đại Quá"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "SeriesIching.seriesHex(\"123\")"
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "start = datetime(2000, 1, 1)\n",
+    "end = datetime(2025, 1, 1)\n",
+    "data = []\n",
+    "for i in range((end - start).days):\n",
+    "    date = start + timedelta(days=i)\n",
+    "    solar = Solar(date.year, date.month, date.day)\n",
+    "    result = Converter.Solar2SexagenaryText(solar)\n",
+    "    result.update({\"date\": date.strftime(\"%d-%b-%Y\")})\n",
+    "    data.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"calendar.csv\", index=False, encoding='utf-8-sig')"
    ]
   },
   {
@@ -89,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
